5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions (1)/1575_1330.log
== TEST (2019-03-12 11:29:25) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:30:33) 
-- CODE:
round(41, 2) print(250/6)
-- ERROR:
File "XXXX", line 1
    round(41, 2) print(250/6)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:30:45) 
-- CODE:
round(250, 2) print(250/6)
-- ERROR:
File "XXXX", line 1
    round(250, 2) print(250/6)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:05) 
-- CODE:
round(250, 2)
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:10) 
-- CODE:
round(250,2)
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:40) 
-- CODE:
round(250, 2)
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:31:50) 
-- CODE:
round(41, 2)
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:00) 
-- CODE:
round(41.66, 2)
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:29) 
-- CODE:
round(250, 2) print(250/6)

-- ERROR:
File "XXXX", line 1
    round(250, 2) print(250/6)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:40) 
-- CODE:
round(250, 2)
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:51) 
-- CODE:
round(250, 5)
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:32:59) 
-- CODE:
round(250, 6)
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:05) 
-- CODE:
round(41, 6)
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:48) 
-- CODE:

print(round(250/6,2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:34:00) 
-- CODE:
print(round(250/6,2))

-- EXECUTION TIME:
0.128495
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
